# codex-commit

./: .gitignore  Cargo.toml  README.md  flake.nix  instructions.md  main.rs
.forgejo/: renovate.json
.forgejo/workflows/: bump.yaml  release.yaml  vulnerable.yaml
.github/: renovate.json
.github/workflows/: release.yaml  vulnerable.yaml
