[package]
name = "codex-commit"
version = "0.0.1"
edition = "2024"
rust-version = "1.94.1"
description = "codex commit message generator"
readme = "README.md"
repository = "https://trev.zip/llc/codex-commit"
license-file = "LICENSE"

[lints.clippy]
pedantic = "warn"

[[bin]]
name = "codex-commit"
path = "main.rs"

[dependencies]
